--- a/indes.html
+++ b/indes.html
@@ -211,7 +211,7 @@
       list-style: none; color: #4cbfeb;
       cursor: pointer;
       text-decoration: none;
-      font-weight: 700;">Clique aqui!</a></span>
+      font-weight: 700;" target="_blank">Clique aqui!</a></span>
     </p>
   </div>
     <div class="app-sem">
@@ -228,7 +228,7 @@
   <div class="app-sem"><h3>
     <strong>
       Crie sua conta na API oficial do App E-Reader
-        conectado a corretora:
+        conectado a corretora EXNOVA:
     </strong>
   </h3>
 </div>
@@ -237,7 +237,7 @@
   <img src="imagens/lucro.png" alt="" class="conta-indicacao-img">
   <strong>
       <h3>
-          <a href="https://abrir.link/LqVGT" style="text-decoration: none; color: rgb(255, 255, 255); padding-bottom: 2px;">
+          <a href="https://abrir.link/LqVGT" style="text-decoration: none; color: rgb(255, 255, 255); padding-bottom: 2px;" target="_blank">
               Criar Conta
           </a>
       </h3>
@@ -247,12 +247,12 @@
 
 <button class="conta-indicaçao2">
   <img src="imagens/whatsapp.png" alt="" class="conta-indicacao-img">
-  <strong><h3><a href="https://t.me/Suporte_44" style="text-decoration: none;
+  <strong><h3><a href="https://chat.whatsapp.com/Bm5kQJvYRmZE9Uu7sx2fC9"target="_blank" style="text-decoration: none;
     list-style: none; color: white;"> Acesse o grupo de alunos:</a></h3></strong></button>
  
   </button>
   <p class="suorte-telegram" style="text-decoration: none;
-    list-style: none; color: white;">Suporte telegram</p>
+    list-style: none; color: white;" ><a href="https://t.me/Suporte_44" target="_blank">Suporte telegram</a></p>
   </main>
     
   </body>
