--- a/indes.html
+++ b/indes.html
@@ -251,8 +251,8 @@
     list-style: none; color: white;"> Acesse o grupo de alunos:</a></h3></strong></button>
  
   </button>
-  <p class="suorte-telegram" style="text-decoration: none;
-    list-style: none; color: white;" ><a href="https://t.me/Suporte_44" target="_blank">Suporte telegram</a></p>
+ <p class="suorte-telegram"  ><a href="https://t.me/Suporte_44" style="text-decoration: none;
+    list-style: none; color: white; "target="_blank">Suporte telegram</a></p>
   </main>
     
   </body>
