--- a/indes.html
+++ b/indes.html
@@ -196,7 +196,7 @@
       <p>Faça o login e identifique os sinais!</p>
       <input type="text" id="login" placeholder="Login">
       <input type="password" id="senha" placeholder="Senha">
-      <p><a href="" style="text-decoration: none;
+      <p><a href="https://t.me/Suporte_44" style="text-decoration: none;
         list-style: none; color: #ffffff;
         cursor: pointer;
         text-decoration: un;
@@ -251,7 +251,7 @@
     list-style: none; color: white;"> Acesse o grupo de alunos:</a></h3></strong></button>
  
   </button>
- <p class="suorte-telegram"  ><a href="https://t.me/Suporte_44" style="text-decoration: none;
+  <p class="suorte-telegram"  ><a href="https://t.me/Suporte_44" style="text-decoration: none;
     list-style: none; color: white; "target="_blank">Suporte telegram</a></p>
   </main>
     
